# opengl-practice

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  fragment.glsl  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  vertex.glsl  window.cpp  window.h
